# sauvc-2022

./: README.md  compute_alpha.py  cv_resource_manager.py  gate_detection.py  main.py  mcu_test.py  utils.py
firmware/pwm-test/: CMakeLists.txt  build.sh  test.c
firmware/uart-ver/: CMakeLists.txt  bno055.c  bno055.h  build.sh  firmware.c
mcu_interface/: commands.py  interface.py  mcu_constants.py  mcu_utils.py
